4-deploying-application-into-eks/2-airports-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airports
  namespace: default
spec:
  type: NodePort
  selector:
    app: airports-data
  ports:
    -  protocol: TCP
       port: 8080
       targetPort: 8080
