4-deploying-application-into-eks/3-airports-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airports-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airports
                port:
                  number: 8080
